2008-07-21  David Zeuthen  <davidz@redhat.com>

	* configure.ac:
	* monitor/Makefile.am:
	* monitor/hal/*:
	* monitor/gphoto2/*:
	Separate the hal and gphoto2 volume monitors - this is in part
	needed to solve bug #520123.

2008-07-21  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolumemonitor.c
	(g_proxy_volume_monitor_setup_session_bus_connection): Use the
	correct hash functions for the hash table of existing proxy
	volume monitors

2008-07-21  Kjartan Maraas  <kmaraas@gnome.org>

	* monitor/proxy/gvfsproxyvolumemonitordaemon.c:
	#include <locale.h> to fix the build.

2008-07-19  Hans Petter Jansson  <hpj@novell.com>

	* client/gdaemonfile.c (g_daemon_file_set_attribute): Don't leak
	D-Bus messages.

2008-07-18  Hans Petter Jansson  <hpj@novell.com>

	* client/gvfsfusedaemon.c (vfs_open)
	(vfs_create): Hold the file handle lock while opening the stream.
	Second part of fix for #536614.

2008-07-17  Hans Petter Jansson  <hpj@novell.com>

	* client/gvfsfusedaemon.c (reindex_file_handle_for_path): Steal the
	old file handle record from the global hash table before replacing
	its path, not after. Part of fix for #536614.

2008-07-16  David Zeuthen  <davidz@redhat.com>

	* monitor/proxy/gproxyvolumemonitor.c:
	* monitor/proxy/gproxyvolumemonitor.h:
	* monitor/proxy/remote-volume-monitor-module.c:
	Avoid setting up proxy volume monitors if no session bus is
	available. Fixes a crasher with the Fedora NetworkManager system
	settings plug-in that is now using GIO to do file monitoring.

2008-07-08  David Zeuthen  <davidz@redhat.com>

	* monitor/hal/Makefile.am: Fix 'make distcheck'.

2008-07-08  David Zeuthen  <davidz@redhat.com>

	* configure.in:
	* Makefile.am:
	* hal/*:
	* monitor/Makefile.am:
	* monitor/hal/*:
	Move hal/ to monitor/hal/.

2008-07-08  David Zeuthen  <davidz@redhat.com>

	Provide infrastructure for out of process volume monitors and
	port the hal volume monitor to use it (#520132).

	* Makefile.am:
	* configure.ac: